--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python >=3.8, < 3.11
   - mamba
-  - bbmap = 38
+  - bbmap >= 38.98
   - snakemake-minimal = 7.3
   - pygments
   - networkx
