--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -179,18 +179,12 @@ DASTool:
 
 genome_dereplication:
   ANI: 0.975                        ## Genome dreplication threshold
-  overlap: 0.2                      ## more info https://drep.readthedocs.io/en/latest/choosing_parameters.html
+  overlap: 0.5                  # See more on https://wwood.github.io/galah/galah-cluster.html
   opt_parameters: ""
-  filter:
-      noFilter: false
-      length: 5000
-      completeness: 50
-      contamination: 10
-  score:
-      completeness: 1
-      contamination: 5
-      N50: 0.5
-      length: 0
+  quality_formula: "Parks2020_reduced" # completeness-5*contamination-5*num_contigs/100-5*num_ambiguous_bases/100000
+  
+genome_min_completeness: 0.5
+genome_max_contamination: 0.1
 
 rename_mags_contigs: true        #Rename contigs of representative MAGs
 
