--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -198,22 +198,25 @@ def get_quality_controlled_reads(wildcards, include_se=False):
 
     """
 
+    Fractions = MULTIFILE_FRACTIONS
+
     if config.get("interleaved_fastqs", False) and SKIP_QC:
-        QC_Headers = ["Reads_QC_se"]
-    else:
-        QC_Headers = ["Reads_QC_" + f for f in MULTIFILE_FRACTIONS]
-        if not include_se:
-            # get only R1 and R2 or se
-            QC_Headers = QC_Headers[: min(len(QC_Headers), 2)]
+        Fractions = ["se"]
+
+    elif not include_se:
+        # get only R1 and R2 or se
+        Fractions = QC_Headers[: min(len(Fractions), 2)]
 
     try:
+        QC_Headers = ["Reads_QC_" + f for f in Fractions]
         return get_files_from_sampleTable(wildcards.sample, QC_Headers)
+
     except FileNotInSampleTableException:
 
         # return files as named by atlas pipeline
         return expand(
             "{sample}/sequence_quality_control/{sample}_QC_{fraction}.fastq.gz",
-            fraction=MULTIFILE_FRACTIONS,
+            fraction=Fractions,
             sample=wildcards.sample,
         )
 
