transform2parquet oneby one and readme

--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -269,7 +269,7 @@ def get_gene_catalog_input():
     annotations_requested = config.get("gene_annotations", [])
 
     try:
-        annotations_files = ["Genecatalog/counts/counts"] + [
+        annotations_files = ["Genecatalog/counts/Readme.md"] + [
             annotation_file_names[key] for key in annotations_requested
         ]
 
