--- a/atlas/workflow/envs/dram.yaml
+++ b/atlas/workflow/envs/dram.yaml
@@ -1,8 +1,23 @@
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - dram=1.3
-  - python-dateutil
-  - scipy <1.9 # # https://github.com/biocore/scikit-bio/issues/1818
+  - python>=3.6
+  - pandas
+  - pytest
+  - scikit-bio
+  - prodigal
+  - mmseqs2!=10.6d92c
+  - hmmer!=3.3.1
+  - trnascan-se >=2
+  - scipy<=1.8.1
+  - sqlalchemy
+  - barrnap
+  - altair >=4
+  - openpyxl
+  - networkx
+  - ruby
+  - parallel
+  - pip
+  - pip:
+    - git+https://github.com/WrightonLabCSU/DRAM.git@v1.4.0.rc1
