--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -6,7 +6,7 @@ dependencies:
   - python >=3.8, < 3.11
   - mamba
   - bbmap >= 38.98
-  - snakemake-minimal = 7.3
+  - snakemake-minimal >= 7.15.1, <7.16
   - pygments
   - networkx
   - graphviz
