--- a/atlas/workflow/envs/checkm2.yaml
+++ b/atlas/workflow/envs/checkm2.yaml
@@ -1,16 +1,15 @@
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
   - python>=3.6
   - scikit-learn=0.23.2
   - h5py=2.10.0
-  - numpy>=1.16.4
+  - numpy=1.19.2
   - diamond>=2.0.4
-  - tensorflow >=2.3.0
-  - lightgbm >=3.2.1
-  - pandas >=1.3
+  - tensorflow >= 2.3.0
+  - lightgbm >= 3.2.1
+  - pandas
   - scipy
   - prodigal>=2.6.3
   - setuptools
@@ -19,4 +18,4 @@ dependencies:
   - tqdm
   - git
   - pip:
-    - git+https://github.com/chklovski/CheckM2.git@e563159f005344d798defb60cea4189e0be8ec92
+    - git+https://github.com/chklovski/CheckM2.git@f88d46288cff39a8cffedebe679adae5355975bb
