--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -295,10 +295,6 @@ rule genecatalog:
 def get_genome_annotations():
 
     annotation_file_names = {
-        "cat_taxonomy": "genomes/taxonomy/taxonomy.tsv",
-        "ssu": "genomes/SSU/ssu_summary.tsv",
-        "checkm_taxonomy": "genomes/checkm/taxonomy.tsv",
-        "checkm_tree": "genomes/tree/checkm.nwk",
         "gtdb_tree": "genomes/tree/finished_gtdb_trees",
         "gtdb_taxonomy": "genomes/taxonomy/gtdb_taxonomy.tsv",
         "genes": "genomes/annotations/genes/predicted",
@@ -309,7 +305,7 @@ def get_genome_annotations():
     annotations_requested = config["annotations"]
 
     try:
-        annotations_files = ["genomes/checkm/completeness.tsv"] + [
+        annotations_files = ["genomes/genome_quality.tsv"] + [
             annotation_file_names[an] for an in annotations_requested
         ]
 
