--- a/atlas/workflow/envs/dram.yaml
+++ b/atlas/workflow/envs/dram.yaml
@@ -2,22 +2,4 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python>=3.6
-  - pandas
-  - pytest
-  - scikit-bio
-  - prodigal
-  - mmseqs2!=10.6d92c
-  - hmmer!=3.3.1
-  - trnascan-se >=2
-  - scipy<=1.8.1
-  - sqlalchemy
-  - barrnap
-  - altair >=4
-  - openpyxl
-  - networkx
-  - ruby
-  - parallel
-  - pip
-  - pip:
-    - git+https://github.com/WrightonLabCSU/DRAM.git@v1.4.0.rc1
+  - dram >=1.4, <1.5
