--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -185,7 +185,11 @@ genome_dereplication:
   ANI: 95                        ## Genome dreplication threshold
   overlap: 0.30                  # See more on https://wwood.github.io/galah/galah-cluster.html
   opt_parameters: ""
-  quality_formula: "Parks2020_reduced" # completeness-5*contamination-5*num_contigs/100-5*num_ambiguous_bases/100000
+  score:
+    completeness: 1
+    contamination: 5
+    N50: 0.5
+    length: 0
   
 
 rename_mags_contigs: true        #Rename contigs of representative MAGs
