--- a/atlas/workflow/envs/required_packages.yaml
+++ b/atlas/workflow/envs/required_packages.yaml
@@ -3,8 +3,9 @@ channels:
     - bioconda
     - defaults
 dependencies:
+    - python >=3.8, <3.11
     - bbmap >= 39.01, <40
     - pigz
-    - bzip2=1.0
-    - pandas=1.2
-    - samtools=1.13
+    - bzip2 >=1.0
+    - pandas >=1.2, <2
+    - samtools >=1.13, <2
