Support for bwa mem2 for genomes and multiqc stats report (#582)
* use bwa mem for genomes

* formating

* correct log path

* use minimap as default for genomes

* use samtools and multiqc to generate mapping rate

* coorect ifelse

* formating

* correct path to html

* new path for bam

* correct input for samtools stats

* adapt bam path in strain

--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -323,7 +323,7 @@ rule genomes:
         "genomes/counts/median_coverage_genomes.parquet",
         expand("genomes/counts/counts_genomes.parquet"),
         "genomes/clustering/allbins2genome.tsv",
-        "genomes/counts/mapping_rate.tsv",
+        "reports/genome_mapping/results.html",
         *get_genome_annotations(),
         "finished_binning",
     output:
