--- a/atlas/workflow/config/default_config.yaml
+++ b/atlas/workflow/config/default_config.yaml
@@ -4,20 +4,20 @@ usejni: false
 gene_annotations:
   - eggNOG
 
-genome_filter_criteria: "(Completeness-5*Contamination >50 )  & (Ambigious_bases <1e6) & (N50 > 5*1e3) & (N_scaffolds < 1e3)"
+genome_filter_criteria: "(Completeness-5*Contamination >50 ) & (Length >=50000) & (Ambigious_bases <1e6) & (N50 > 5*1e3) & (N_scaffolds < 1e3)"
 exclude_unplacable_genomes: false
 
 genome_dereplication:
-  ANI: 97.5                        ## Genome dreplication threshold
-  overlap: 0.5                  # See more on https://wwood.github.io/galah/galah-cluster.html
+  ANI: 0.95                        ## Genome dreplication threshold
+  overlap: 0.2                  # See more on https://drep.readthedocs.io/en/latest/module_descriptions.html
+  greedy_clustering: "auto"     # Add options for greedy clustering 'auto' when using more than 5k bins
   opt_parameters: ""
   score:
     completeness: 1
     contamination: 5
     N50: 0.5
     length: 0
-  
-genome_min_completeness: 50
-genome_max_contamination: 10
+    centrality: 1
+
 
 genome_aligner: "minimap"
