--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -178,7 +178,7 @@ DASTool:
   score_threshold: 0.5              # Score threshold until selection algorithm will keep selecting bins [0..1].
 
 
-genome_filter_criteria: "(Completeness-5*Contamination >50 ) & (Length >=50000) & (Ambigious_bases <1e6) & (N50 > 5*1e3) & (N_scaffolds < 1e3)"
+genome_filter_criteria: "(Completeness-5*Contamination >50 ) & (Length_scaffolds >=50000) & (Ambigious_bases <1e6) & (N50 > 5*1e3) & (N_scaffolds < 1e3)"
 
 
 genome_dereplication:
