--- a/atlas/workflow/envs/dram.yaml
+++ b/atlas/workflow/envs/dram.yaml
@@ -1,8 +1,5 @@
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - dram=1.3
-  - python-dateutil
-  - scipy <1.9 # # https://github.com/biocore/scikit-bio/issues/1818
+  - dram >=1.4, <1.5
