--- a/atlas/workflow/config/default_config.yaml
+++ b/atlas/workflow/config/default_config.yaml
@@ -20,3 +20,11 @@ genome_dereplication:
     centrality: 1
 
 genome_aligner: "minimap"
+
+
+# genomes
+
+## Dereplication
+sketch_k: 21
+sketch_size: 10000
+sketch_max_dist: 0.2
