--- a/atlas/workflow/config/default_config.yaml
+++ b/atlas/workflow/config/default_config.yaml
@@ -20,3 +20,5 @@ genome_dereplication:
     centrality: 1
 
 genome_aligner: "minimap"
+
+bin_quality_asesser: checkm2          #[ checkm2, busco, cehckm]
