expand not needed

--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -321,7 +321,7 @@ def get_genome_annotations():
 rule genomes:
     input:
         "genomes/counts/median_coverage_genomes.parquet",
-        expand("genomes/counts/counts_genomes.parquet"),
+        "genomes/counts/counts_genomes.parquet",
         "genomes/clustering/allbins2genome.tsv",
         "reports/genome_mapping/results.html",
         *get_genome_annotations(),
