--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -18,18 +18,23 @@ jobs:
       pull-requests: write
 
     steps:
-    - uses: actions/stale@v5
+    - uses: actions/stale@v7
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: |
-          There was no activity since some time. I hope your issue is solved in the mean time. This issue will automatically close soon if no further activity occurs. Thank you for your contributions.
-          stale-pr-message: |
-            This PR is stale because it has not had any recent activity.
-            This PR will automatically close soon if no further activity occurs. Thank you for your contributions.
-          days-before-stale: 30
-          days-before-close: 5
-          stale-issue-label: stale
-          stale-pr-label: stale
-          exempt-issue-labels: 'keep,enhancement,bug,documentation,"Feature request","Known issue"'
-          exempt-pr-labels: ''
-          days-before-pr-stale: 99999999
+        stale-issue-message: |
+              There was no activity since some time. I hope your issue is solved in the mean time. 
+              This issue will automatically close soon if no further activity occurs. 
+              
+              Thank you for your contributions.
+        stale-pr-message: |
+            This PR is stale because it has not had any recent activity. 
+            This PR will automatically close soon if no further activity occurs. 
+            
+            Thank you for your contributions.
+        days-before-stale: 30
+        days-before-close: 5
+        stale-issue-label: stale
+        stale-pr-label: stale
+        exempt-issue-labels: 'keep,enhancement,bug,documentation,"Feature request","Known issue"'
+        exempt-pr-labels: ''
+        days-before-pr-stale: 99999999
