make semibin extra to config

--- a/atlas/workflow/config/default_config.yaml
+++ b/atlas/workflow/config/default_config.yaml
@@ -22,3 +22,5 @@ genome_dereplication:
 genome_aligner: "minimap"
 
 bin_quality_asesser: checkm2          #[ checkm2, busco, cehckm]
+
+semibin_train_extra: ""
