--- a/atlas/workflow/config/default_config.yaml
+++ b/atlas/workflow/config/default_config.yaml
@@ -22,5 +22,6 @@ genome_dereplication:
 genome_aligner: "minimap"
 
 bin_quality_asesser: checkm2          #[ checkm2, busco, cehckm]
+gunc_database: "progenomes"  # progenomes or gtdb
 
 semibin_train_extra: ""
