--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = cli/_version.py
-versionfile_build = cli/_version.py
+versionfile_source = CLI/_version.py
+versionfile_build = CLI/_version.py
 tag_prefix = v
