--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Install atlas
           command: |
               source activate ./atlasenv
-              pip install .
+              python -m pip install . --no-deps -vv
               conda list
               atlas --help
               atlas --version
