Revert "install as in bioconda"
This reverts commit b83aab5967833d97fcc081e13698b8ee95b7d880.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Install atlas
           command: |
               source activate ./atlasenv
-              python -m pip install . --no-deps -vv
+              pip install .
               conda list
               atlas --help
               atlas --version
