Revert "ci install with pip"
This reverts commit 646cfc7d85519c4a447e244dd82ff0b22a0fd423.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Install atlas
           command: |
               source activate ./atlasenv
-              pip install .
+              python setup.py install
               conda list
               atlas --help
               atlas --version
