--- a/workflow/config/default_config.yaml
+++ b/workflow/config/default_config.yaml
@@ -2,7 +2,7 @@
 usejni: false
 
 gene_annotations:
-  - eggNOG
+  - dram
 
 genome_filter_criteria: "(Completeness-5*Contamination >50 ) & (Length_scaffolds >=50000) & (Ambigious_bases <1e6) & (N50 > 5*1e3) & (N_scaffolds < 1e3)"
 exclude_unplacable_genomes: false
