--- a/workflow/config/template_config.yaml
+++ b/workflow/config/template_config.yaml
@@ -181,6 +181,10 @@ DASTool:
 genome_filter_criteria: "(Completeness-5*Contamination >50 ) & (Length_scaffolds >=50000) & (Ambigious_bases <1e6) & (N50 > 5*1e3) & (N_scaffolds < 1e3)"
 
 
+filter_chimieric_bins: true  # filter chimeric bins using GUNC
+gunc_database: "progenomes"  # 'progenomes' or 'gtdb'
+
+
 genome_dereplication:
   ANI: 0.95                     ## Genome dreplication threshold 0.95 is more or less species
   overlap: 0.2                  # See more on https://drep.readthedocs.io/en/latest/module_descriptions.html
