Dram on genecatalog (#632)
* rule for annotate genecatalog subset with dram

* put eggnog in intermediate folder

* made dram work

* use config file save parquet files

* add eggnog.parquet

* dram as seperate parquets

* long running dram gene annotation

* dram annotation works

* formated and split to script

* tested

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -229,11 +229,11 @@ include: "rules/qc.smk"
 include: "rules/assemble.smk"
 include: "rules/binning.smk"
 include: "rules/genomes.smk"
+include: "rules/dram.smk"
 include: "rules/genecatalog.smk"
 include: "rules/sra.smk"
 include: "rules/gtdbtk.smk"
 include: "rules/cobinning.smk"
-include: "rules/dram.smk"
 include: "rules/strains.smk"
 
 
@@ -260,7 +260,8 @@ rule all:
 
 def get_gene_catalog_input():
     annotation_file_names = {
-        "eggNOG": "Genecatalog/annotations/eggNog.tsv.gz",
+        "eggNOG": "Genecatalog/annotations/eggNOG.parquet",
+        "dram": "Genecatalog/annotations/dram",
         "single_copy": expand(
             "Genecatalog/annotation/single_copy_genes_{domain}.tsv",
             domain=["bacteria", "archaea"],
@@ -288,7 +289,6 @@ rule genecatalog:
         "Genecatalog/gene_catalog.faa",
         "Genecatalog/clustering/orf_info.parquet",
         get_gene_catalog_input(),
-        # ,
     output:
         touch("finished_genecatalog"),
 
