--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ jobs:
           name: test assembly
           command: |
             source activate ./atlasenv
-            test/test_assembly.sh --resources mem=$MEM --jobs=$N_THREADS --restart-times=2 
+            test/test_assembly.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2 
       - store_artifacts:
           path: test/Test_assembly/logs
           destination: assembly_logs
@@ -187,7 +187,7 @@ jobs:
           command: |
             source activate ./atlasenv
             WD='test/Test_assembly'
-            atlas run genecatalog --omit-from combine_egg_nogg_annotations  -w $WD --resources mem=$MEM --jobs=$N_THREADS --restart-times=2 
+            atlas run genecatalog --omit-from combine_egg_nogg_annotations  -w $WD --resources mem=$MEM java_mem=$MEM--jobs=$N_THREADS --restart-times=2 
 
   binning:
     <<: *defaults
@@ -203,7 +203,7 @@ jobs:
           command: |
             source activate ./atlasenv
             WD='test/Test_assembly'
-            atlas run binning -w $WD --resources mem=$MEM --jobs=$N_THREADS --restart-times=2 --config final_binner=metabat
+            atlas run binning -w $WD --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2 --config final_binner=metabat
 
       - store_test_results:
           path: test/Test_assembly/reports/bin_report_metabat.html
