--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -13,15 +13,12 @@ jobs:
     - uses: mamba-org/setup-micromamba@v1
       with:
         micromamba-version: '1.3.1-0'
-        environment-file: environment.yml
+        environment-file: atlasenv.yml
+        environment-name: atlasenv
         init-shell: >-
           bash
         cache-environment: true
         post-cleanup: 'all'
-    - name: Install dependencies
-      run: |
-        mamba env update --file atlasenv.yml --name base
-        conda list
     - name: Install atlas
       run: |
         python setup.py install
